<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.Moshu.MysticTreasures</groupId>
    <artifactId>MysticTreasures</artifactId>
    <version>1.45</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>

        <defaultGoal>clean package</defaultGoal>

        <finalName>MysticTreasures</finalName>
        <sourceDirectory>src</sourceDirectory>
        <resources>

            <resource>
                <filtering>true</filtering>
                <directory>${basedir}/src/com/Moshu/resources/</directory>
            </resource>

            <resource>

                <filtering>true</filtering>
                <directory>${basedir}/src/</directory>

            </resource>

        </resources>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.8.1</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/libraries</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <!-- here the phase you need -->
                        <phase>validate</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${basedir}/target/classes/schematics/</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src/schematics/</directory>
                                    <filtering>true</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>

    </build>

    <repositories>

        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>

        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>

        <repository>
            <id>everything</id>
            <url>https://repo.citizensnpcs.co/</url>
        </repository>

        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>

        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

        <repository>
            <id>nexus</id>
            <name>Lumine Releases</name>
            <url>https://mvn.lumine.io/repository/maven-public/</url>
        </repository>

        <repository>
            <id>oraxen</id>
            <name>Oraxen Repository</name>
            <url>https://repo.oraxen.com/releases</url>
        </repository>

        <repository>
            <id>fancyplugins-releases</id>
            <name>FancyPlugins Repository</name>
            <url>https://repo.fancyplugins.de/releases</url>
        </repository>

        <repository>
            <id>matteodev</id>
            <url>https://maven.devs.beer/</url>
        </repository>

    </repositories>

    <dependencies>

        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.pop</groupId>
            <artifactId>chunkyborder</artifactId>
            <version>1.2.10</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.0.13-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.6</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.github.decentsoftware-eu</groupId>
            <artifactId>decentholograms</artifactId>
            <version>2.8.14</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>de.tr7zw</groupId>
                    <artifactId>item-nbt-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>io.lumine</groupId>
            <artifactId>Mythic-Dist</artifactId>
            <version>5.8.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>dev.lone</groupId>
            <artifactId>api-itemsadder</artifactId>
            <version>4.0.2-beta-release-11</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>de.oliver</groupId>
            <artifactId>FancyHolograms</artifactId>
            <version>2.4.2</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>io.th0rgal</groupId>
            <artifactId>oraxen</artifactId>
            <version>1.189.0</version>
            <exclusions>
                <exclusion>
                    <groupId>me.gabytm.util</groupId>
                    <artifactId>actions-spigot</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.jetbrains</groupId>
                    <artifactId>annotations</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.ticxo</groupId>
                    <artifactId>PlayerAnimator</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.github.stefvanschie.inventoryframework</groupId>
                    <artifactId>IF</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.th0rgal</groupId>
                    <artifactId>protectionlib</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>dev.triumphteam</groupId>
                    <artifactId>triumph-gui</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.bstats</groupId>
                    <artifactId>bstats-bukkit</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.jeff-media</groupId>
                    <artifactId>custom-block-data</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.jeff-media</groupId>
                    <artifactId>persistent-data-serializer</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.jeff_media</groupId>
                    <artifactId>MorePersistentDataTypes</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>gs.mclo</groupId>
                    <artifactId>java</artifactId>
                </exclusion>
            </exclusions>
            <scope>provided</scope>
        </dependency>

    </dependencies>


</project>